# HalfedgeCatmullClark

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CatmullClark.cpp  CatmullClark.h  README.md  cuda_common.h
cuda-rewrite/: CatmullClark.cpp  CatmullClark.cu  CatmullClark.h  Mesh.cpp  Mesh.cu  Mesh.h  Utilities.cu  Utilities.h
cuda-rewrite/examples/: CMakeLists.txt  job-gpu  subd_rewrite.cpp  subd_rewrite.cu
cuda-rewrite/examples/meshes/: T-Rex.ccm
examples/: .appveyor.yml  CMakeLists.txt  ConcurrentBitField.h  README.md  mesh_info.c  obj_to_ccm.c  subd_cpu.c  subd_gpu.c
examples/meshes/: ArmorGuy.ccm  Bigguy.ccm  Bishop.ccm  Car.ccm  Imrod.ccm  Monsterfrog.ccm  Rook.ccm
glsl/: CatmullClark_Scatter.glsl  cc_CageEdgePoints_Scatter.glsl  cc_CageFacePoints_Scatter.glsl  cc_CageVertexPoints_Scatter.glsl  cc_EdgePoints_Scatter.glsl  cc_FacePoints_Scatter.glsl  cc_RefineCageCreases.glsl  cc_RefineCageHalfedges.glsl  cc_RefineCageVertexUvs.glsl  cc_RefineCreases.glsl  cc_RefineHalfedges.glsl  cc_RefineVertexUvs.glsl  cc_VertexPoints_Scatter.glsl
